# auth-service

./: .env  .gitignore  Cargo.toml  docker-compose.yml
migrations/2020-05-15-165007_create_users/: down.sql  up.sql
src/: main.rs
src/controllers/: mod.rs
src/controllers/version_one/: user.rs
src/database/: bk.rs  mod.rs  schema.rs
src/database/models/: mod.rs  users.rs
src/errors/: api.rs
src/routes/: mod.rs
src/routes/version_one/: mod.rs  user.rs
src/utils/structures/: filterable.rs  mod.rs  pageable.rs
