[package]
name = "auth-service"
version = "0.1.0"
authors = ["konstdea <konstdea@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
serde = "1.0.110"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
chrono = { version = "0.4.11", features = ["serde"] }
r2d2 = "0.8.8"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
lazy_static = "1.4.0"
log = "0.4.8"
serde_json = "1.0.53"
env_logger = "0.7.1"

#systemfd --no-pid -s http::3000 -- cargo watch -x run
[dev-dependencies]
listenfd = "0.3"